--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
-<h2>Hello World</h2>
-
-<p>The time is now: <%= Time.now %></p>
+<div class="text-center">
+  <h1>League Accounts</h1>
+  
+  <% @summoners.each do |summoner| %>
+    <h2><%= "#{summoner[:name]} is #{summoner[:tier]} #{summoner[:division]}, #{summoner[:points]} points." %></h2>
+  <% end %>
+</div>
